using ACLS.SharedKernel;

namespace ACLS.Domain.Identity;

/// <summary>
/// A secure, single-use token generated by a Manager and sent via email to a prospective Resident.
/// The Resident uses this token to register an account, automatically linking it to the specified Unit.
/// A token expires 72 hours after issuance if unused.
/// Table: InvitationTokens
/// </summary>
public sealed class InvitationToken : EntityBase
{
    public int InvitationTokenId { get; private set; }
    public string Token { get; private set; } = string.Empty;
    public int UnitId { get; private set; }
    public int PropertyId { get; private set; }
    public int IssuedByManagerUserId { get; private set; }
    public DateTime IssuedAt { get; private set; }
    public DateTime ExpiresAt { get; private set; }
    public DateTime? UsedAt { get; private set; }
    public int? UsedByUserId { get; private set; }
    public bool IsRevoked { get; private set; }

    /// <summary>Private parameterless constructor for EF Core.</summary>
    private InvitationToken() { }

    /// <summary>
    /// Creates a new InvitationToken. The token string must be a cryptographically
    /// random value generated by the calling service (e.g. 64-char hex from RandomNumberGenerator).
    /// Expires exactly 72 hours from issuance.
    /// </summary>
    public static InvitationToken Create(
        string token,
        int unitId,
        int propertyId,
        int issuedByManagerUserId)
    {
        Guard.Against.NullOrWhiteSpace(token, nameof(token));
        Guard.Against.NegativeOrZero(unitId, nameof(unitId));
        Guard.Against.NegativeOrZero(propertyId, nameof(propertyId));
        Guard.Against.NegativeOrZero(issuedByManagerUserId, nameof(issuedByManagerUserId));

        var issuedAt = DateTime.UtcNow;

        return new InvitationToken
        {
            Token = token,
            UnitId = unitId,
            PropertyId = propertyId,
            IssuedByManagerUserId = issuedByManagerUserId,
            IssuedAt = issuedAt,
            ExpiresAt = issuedAt.AddHours(InvitationTokenConstants.ExpiryHours),
            IsRevoked = false
        };
    }

    /// <summary>
    /// Returns true if this token is still valid for use:
    /// not used, not revoked, and not expired.
    /// </summary>
    public bool IsValid(DateTime utcNow) =>
        UsedAt is null && !IsRevoked && ExpiresAt > utcNow;

    /// <summary>
    /// Marks the token as redeemed by the specified user.
    /// Throws if the token is not valid at the time of redemption.
    /// </summary>
    public void Redeem(int usedByUserId, DateTime utcNow)
    {
        if (!IsValid(utcNow))
            throw new InvalidOperationException(
                $"InvitationToken '{Token[..8]}…' is not valid for redemption. " +
                "It may be expired, already used, or revoked.");

        Guard.Against.NegativeOrZero(usedByUserId, nameof(usedByUserId));

        UsedAt = utcNow;
        UsedByUserId = usedByUserId;
    }

    /// <summary>Revokes an unused token. A Manager may revoke tokens before expiry.</summary>
    public void Revoke()
    {
        if (UsedAt is not null)
            throw new InvalidOperationException(
                "Cannot revoke an InvitationToken that has already been redeemed.");
        IsRevoked = true;
    }
}

/// <summary>Constants governing InvitationToken lifecycle.</summary>
public static class InvitationTokenConstants
{
    /// <summary>Tokens expire 72 hours after issuance.</summary>
    public const int ExpiryHours = 72;
}
